Users and service requests are in table view. Can remove users.

--- a/BabySittingAPI/src/main/resources/view_users.fxml
+++ b/BabySittingAPI/src/main/resources/view_users.fxml
@@ -22,6 +22,7 @@
                 <TableColumn prefWidth="130.0" text="User ID" />
                 <TableColumn prefWidth="130.0" text="Permissions" />
                   <TableColumn prefWidth="100.0" text="Username" />
+                  <TableColumn prefWidth="100.0" text="Remove" />
               </columns>
                <styleClass>
                   <String fx:value="table-view" />
