--- a/BabySittingAPI/src/main/resources/overall.fxml
+++ b/BabySittingAPI/src/main/resources/overall.fxml
@@ -4,27 +4,27 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
-    <JFXTabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE" minHeight="720.0" minWidth="1280.0">
-        <Tab text="Create Service Request">
-            <AnchorPane fx:id="createServiceRequestTabPane">
+
+<?import javafx.scene.layout.Pane?>
+<JFXTabPane fx:id="tabPane" minHeight="720.0" minWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
+     <Tab text="Create Service Request">
+         <AnchorPane fx:id="createServiceRequestTabPane">
 
             </AnchorPane>
-        </Tab>
-        <Tab text="Add User">
-            <AnchorPane fx:id="addUserTabPane">
+     </Tab>
+     <Tab text="Add User">
+         <Pane fx:id="addUserTabPane">
 
-            </AnchorPane>
-        </Tab>
-        <Tab text="View Service Requests">
-            <AnchorPane fx:id="viewServiceRequestTabPane">
+            </Pane>
+     </Tab>
+     <Tab text="View Service Requests">
+         <Pane fx:id="viewServiceRequestTabPane">
 
-            </AnchorPane>
-        </Tab>
-        <Tab text="View Users">
-            <AnchorPane fx:id="viewUsersTabPane">
+            </Pane>
+     </Tab>
+     <Tab text="View Users">
+         <Pane fx:id="viewUsersTabPane">
 
-            </AnchorPane>
-        </Tab>
-    </JFXTabPane>
-</AnchorPane>
+            </Pane>
+     </Tab>
+ </JFXTabPane>
