--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -92,7 +92,7 @@
                                     <Insets bottom="5.0" />
                                  </opaqueInsets>
                               </FlowPane>
-                              <JFXButton fx:id="cancelButton" alignment="BASELINE_RIGHT" cancelButton="true" contentDisplay="CENTER" onAction="#setCancelButton" stylesheets="@../css/background.css" text="Go Back to Path Finding" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="TOP">
+                              <JFXButton fx:id="cancelButton" alignment="BASELINE_RIGHT" cancelButton="true" contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-OK" stylesheets="@../css/background.css" text="Go Back to Path Finding" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
@@ -153,7 +153,7 @@
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </JFXButton>
-                              <JFXButton fx:id="cancelButton1" cancelButton="true" contentDisplay="CENTER" onAction="#setCancelButton" style="-fx-font-weight: bold;" stylesheets="@../css/background.css" text="Go Back to Path Finding" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="TOP" />
+                              <JFXButton fx:id="cancelButton1" cancelButton="true" contentDisplay="CENTER" onAction="#setCancelButton" style="-fx-font-weight: bold;" styleClass="jfx-button-OK" stylesheets="@../css/background.css" text="Go Back to Path Finding" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER" />
                            </children>
                         </GridPane>
                      </content>
