--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -7,6 +7,7 @@
 <?import com.jfoenix.controls.JFXToggleButton?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -270,76 +271,86 @@
                         <Insets bottom="50.0" />
                      </padding>
                          </AnchorPane>
-                  <TitledPane fx:id="titledPane" alignment="TOP_LEFT" maxWidth="300.0" onContextMenuRequested="#setTitledPane" onMouseClicked="#setTitledPane" prefWidth="300.0" stylesheets="@../css/pathfinding_tab.css" text="Find Path" StackPane.alignment="TOP_LEFT">
-                     <content>
-                            <GridPane fx:id="interfaceGrid" prefWidth="200.0" style="-fx-background-color: #015080;" stylesheets="/css/controlsGridpane.css">
-                                <columnConstraints>
-                                    <ColumnConstraints fillWidth="true" hgrow="ALWAYS" minWidth="200.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-                                    <RowConstraints percentHeight="8.0" vgrow="ALWAYS" />
-                                    <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
-                                    <RowConstraints percentHeight="8.0" vgrow="ALWAYS" />
+                  <Accordion maxWidth="300.0" prefWidth="300.0" StackPane.alignment="TOP_LEFT">
+                    <panes>
+                        <TitledPane fx:id="titledPane" alignment="TOP_LEFT" maxWidth="300.0" onContextMenuRequested="#setTitledPane" onMouseClicked="#setTitledPane" prefWidth="300.0" stylesheets="@../css/pathfinding_tab.css" text="Find Path">
+                           <content>
+                                  <GridPane fx:id="interfaceGrid" prefWidth="200.0" style="-fx-background-color: #015080;" stylesheets="/css/controlsGridpane.css">
+                                      <columnConstraints>
+                                          <ColumnConstraints fillWidth="true" hgrow="ALWAYS" minWidth="200.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                          <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
+                                          <RowConstraints percentHeight="8.0" vgrow="ALWAYS" />
+                                          <RowConstraints percentHeight="5.0" vgrow="ALWAYS" />
+                                          <RowConstraints percentHeight="8.0" vgrow="ALWAYS" />
+                                          <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
+                                          <RowConstraints percentHeight="15.0" vgrow="ALWAYS" />
+                                    <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="ALWAYS" />
                                     <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-                                    <RowConstraints percentHeight="15.0" vgrow="ALWAYS" />
-                              <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="ALWAYS" />
-                              <RowConstraints percentHeight="10.0" vgrow="ALWAYS" />
-                                    <RowConstraints maxHeight="83.0" minHeight="67.0" percentHeight="25.0" prefHeight="68.0" vgrow="ALWAYS" />
-                                    <RowConstraints maxHeight="106.0" minHeight="0.0" percentHeight="14.0" prefHeight="105.0" vgrow="ALWAYS" />
-                                </rowConstraints>
-                                <children>
-                                    <JFXComboBox fx:id="initialLocationCombo" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                    <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Initial Location" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
-                                        <font>
-                                            <Font name="System Bold" size="20.0" />
-                                        </font>
-                                 <GridPane.margin>
-                                    <Insets left="25.0" />
-                                 </GridPane.margin>
-                                    </Text>
-                                    <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
-                                        <font>
-                                            <Font name="System Bold" size="20.0" />
-                                        </font>
-                                 <GridPane.margin>
-                                    <Insets left="25.0" />
-                                 </GridPane.margin>
-                                    </Text>
-                                    <JFXComboBox fx:id="destinationCombo" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                                    <JFXButton alignment="TOP_CENTER" contentDisplay="CENTER" graphicTextGap="0.0" onAction="#cancel" prefWidth="100.0" style="-fx-background-color: transparent;" text=" " textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-                                        <font>
-                                            <Font name="System Bold" size="14.0" />
-                                        </font>
-                                 <graphic>
-                                    <ImageView fitHeight="40.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../images/cancel4.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                    </JFXButton>
-                                    <JFXToggleButton fx:id="noStairsButton" onAction="#noStairsToggled" prefHeight="30.0" stylesheets="@/css/background.css" text="NO STAIRS" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
-                                        <font>
-                                            <Font name="System Bold" size="14.0" />
-                                        </font>
-                                    </JFXToggleButton>
-                                    <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" style="-fx-background-color: TRANSPARENT;" stylesheets="@/css/background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
-                                        <font>
-                                            <Font name="System Bold" size="14.0" />
-                                        </font>
-                                    </JFXButton>
-                              <JFXButton fx:id="aboutButton" onAction="#setAboutButton" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="About Us" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="BOTTOM" />
-                                </children>
-                            </GridPane>
-                     </content>
-                     <StackPane.margin>
-                        <Insets />
-                     </StackPane.margin>
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </TitledPane>
+                                          <RowConstraints maxHeight="83.0" minHeight="67.0" percentHeight="25.0" prefHeight="68.0" vgrow="ALWAYS" />
+                                          <RowConstraints maxHeight="106.0" minHeight="0.0" percentHeight="14.0" prefHeight="105.0" vgrow="ALWAYS" />
+                                      </rowConstraints>
+                                      <children>
+                                          <JFXComboBox fx:id="initialLocationCombo" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                          <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Initial Location" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+                                              <font>
+                                                  <Font name="System Bold" size="20.0" />
+                                              </font>
+                                       <GridPane.margin>
+                                          <Insets left="25.0" />
+                                       </GridPane.margin>
+                                          </Text>
+                                          <Text fill="WHITE" smooth="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                              <font>
+                                                  <Font name="System Bold" size="20.0" />
+                                              </font>
+                                       <GridPane.margin>
+                                          <Insets left="25.0" />
+                                       </GridPane.margin>
+                                          </Text>
+                                          <JFXComboBox fx:id="destinationCombo" prefWidth="200.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                          <JFXButton alignment="TOP_CENTER" contentDisplay="CENTER" graphicTextGap="0.0" onAction="#cancel" prefWidth="100.0" style="-fx-background-color: transparent;" text=" " textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                              <font>
+                                                  <Font name="System Bold" size="14.0" />
+                                              </font>
+                                       <graphic>
+                                          <ImageView fitHeight="40.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/cancel4.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                          </JFXButton>
+                                          <JFXToggleButton fx:id="noStairsButton" onAction="#noStairsToggled" prefHeight="30.0" stylesheets="@/css/background.css" text="NO STAIRS" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
+                                              <font>
+                                                  <Font name="System Bold" size="14.0" />
+                                              </font>
+                                          </JFXToggleButton>
+                                          <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" style="-fx-background-color: TRANSPARENT;" stylesheets="@/css/background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                                              <font>
+                                                  <Font name="System Bold" size="14.0" />
+                                              </font>
+                                          </JFXButton>
+                                    <JFXButton fx:id="aboutButton" onAction="#setAboutButton" styleClass="jfx-button-add" stylesheets="@../css/background.css" text="About Us" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="BOTTOM" />
+                                      </children>
+                                  </GridPane>
+                           </content>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </TitledPane>
+                      <TitledPane animated="false" stylesheets="@../css/pathfinding_tab.css" text="User Tools">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        </content>
+                           <styleClass>
+                              <String fx:value="titled-pane" />
+                              <String fx:value="title" />
+                           </styleClass>
+                      </TitledPane>
+                    </panes>
+                  </Accordion>
                </children>
             </StackPane>
             </center>
