--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -340,14 +340,49 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </TitledPane>
-                      <TitledPane animated="false" stylesheets="@../css/pathfinding_tab.css" text="User Tools">
+                      <TitledPane animated="false" styleClass="title" stylesheets="@../css/pathfinding_tab.css" text="User Tools">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              <GridPane prefHeight="644.0" prefWidth="298.0" style="-fx-background-color: #015080;">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <JFXButton fx:id="reservationButton" contentDisplay="TOP" graphicTextGap="0.0" onAction="#setReservationButton" styleClass="jfx-button-admin-tools-main" stylesheets="@../css/background.css" text="Reserve a Room" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                       <graphic>
+                                          <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/RoomReservation.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <GridPane.margin>
+                                          <Insets top="50.0" />
+                                       </GridPane.margin>
+                                    </JFXButton>
+                                    <JFXButton fx:id="resolveRequestButton" contentDisplay="TOP" graphicTextGap="0.0" onAction="#setResolveRequestButton" styleClass="jfx-button-admin-tools-main" stylesheets="@../css/background.css" text="Resolve Requests " GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                       <graphic>
+                                          <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../images/024-doctor-1.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <GridPane.margin>
+                                          <Insets top="50.0" />
+                                       </GridPane.margin>
+                                    </JFXButton>
+                                 </children>
+                              </GridPane>
                         </content>
-                           <styleClass>
-                              <String fx:value="titled-pane" />
-                              <String fx:value="title" />
-                           </styleClass>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
                       </TitledPane>
                     </panes>
                   </Accordion>
