--- a/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
@@ -20,15 +20,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-      <BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
+<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
           <top>
               <MenuBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="600.0" style="-fx-background-color: #ffc41e;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                   <menus>
-                      <Menu mnemonicParsing="false" onAction="#setCancelButton" onShowing="#setHomeButton" text="Back">
+                      <Menu mnemonicParsing="false" onAction="#setCancelButton" onShowing="#setHomeButton" text="Close">
                <items>
                   <MenuItem mnemonicParsing="false" text="HOME" />
                </items>
+               <graphic>
+                  <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/cancel2.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Menu>
                   </menus>
                   <effect>
@@ -55,32 +61,32 @@
                <children>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/feeder1.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="feeder" layoutX="40.0" layoutY="145.0" mnemonicParsing="false" text="Feeder" textFill="#015080" />
+                        <CheckBox fx:id="feeder" layoutX="50.0" layoutY="161.0" mnemonicParsing="false" text="Feeder" textFill="#015080" />
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/diaper.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="diaper" layoutX="37.0" layoutY="145.0" mnemonicParsing="false" text="Diapers" textFill="#015080" />
+                        <CheckBox fx:id="diaper" layoutX="47.0" layoutY="161.0" mnemonicParsing="false" text="Diapers" textFill="#015080" />
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/bath.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="bath" layoutX="48.0" layoutY="145.0" mnemonicParsing="false" text="Bath" textFill="#015080" />
+                        <CheckBox fx:id="bath" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Bath" textFill="#015080" />
                      </children>
                   </Pane>
                </children>
@@ -89,32 +95,32 @@
                <children>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/rocking-horse.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="toy" layoutX="48.0" layoutY="145.0" mnemonicParsing="false" text="Toys" textFill="#015080" />
+                        <CheckBox fx:id="toy" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Toys" textFill="#015080" />
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/baby-stroller.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="babyStroller" layoutX="18.0" layoutY="145.0" mnemonicParsing="false" text="Baby Stroller" textFill="#015080" />
+                        <CheckBox fx:id="babyStroller" layoutX="27.0" layoutY="161.0" mnemonicParsing="false" text="Baby Stroller" textFill="#015080" />
                      </children>
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="paneBabysitting" stylesheets="@../css/background.css">
                      <children>
-                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="20.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/Babysitting/cutlery.png" />
                            </image>
                         </ImageView>
-                        <CheckBox fx:id="food" layoutX="47.0" layoutY="145.0" mnemonicParsing="false" text="Food" textFill="#015080" />
+                        <CheckBox fx:id="food" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Food" textFill="#015080" />
                      </children>
                   </Pane>
                </children>
@@ -123,41 +129,21 @@
       </GridPane>
    </center>
    <left>
-      <GridPane prefWidth="200.0" style="-fx-background-color: #015080;" BorderPane.alignment="CENTER">
+      <GridPane prefWidth="250.0" style="-fx-background-color: #015080;" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" percentHeight="7.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="7.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <FlowPane prefWidth="100.0" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
-               <children>
-                  <JFXButton fx:id="confirmButton" alignment="CENTER" contentDisplay="CENTER" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm">
-                     <FlowPane.margin>
-                        <Insets left="40.0" />
-                     </FlowPane.margin>
-                  </JFXButton>
-                  <JFXButton fx:id="cancelButton" alignment="CENTER" contentDisplay="CENTER" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" ">
-                     <graphic>
-                        <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/cancel2.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <FlowPane.margin>
-                        <Insets left="20.0" />
-                     </FlowPane.margin>
-                  </JFXButton>
-               </children>
-            </FlowPane>
+            <JFXButton fx:id="confirmButton" alignment="CENTER" contentDisplay="CENTER" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" GridPane.rowIndex="6" />
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="BabySitting" GridPane.halignment="LEFT">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
@@ -174,30 +160,30 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
-            <JFXTextField fx:id="serviceMessage" alignment="TOP_LEFT" maxWidth="160.0" prefHeight="250.0" prefWidth="160.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="TOP">
+            <JFXTextField fx:id="serviceMessage" alignment="TOP_LEFT" maxWidth="185.0" prefHeight="250.0" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="TOP">
                <GridPane.margin>
-                  <Insets left="20.0" />
+                  <Insets left="30.0" />
                </GridPane.margin>
             </JFXTextField>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Additional Messages" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Additional Messages" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="TOP">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
                <GridPane.margin>
-                  <Insets left="20.0" />
+                  <Insets left="30.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Selection" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Selection" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
                <GridPane.margin>
-                  <Insets left="20.0" />
+                  <Insets left="30.0" />
                </GridPane.margin>
             </Text>
-            <JFXComboBox fx:id="roomSelect" prefWidth="160.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="TOP">
+            <JFXComboBox fx:id="roomSelect" prefWidth="185.0" style="-fx-background-color: #ffffff;" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="TOP">
                <GridPane.margin>
-                  <Insets left="20.0" />
+                  <Insets left="30.0" />
                </GridPane.margin>
             </JFXComboBox>
          </children>
