--- a/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/add_user.fxml
+++ b/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/add_user.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerAU">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerAU">
    <children>
       <GridPane alignment="CENTER">
         <columnConstraints>
@@ -30,7 +30,7 @@
                   <Font size="36.0" />
                </font>
             </JFXButton>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User ID">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="edu.wpi.cs3733.d19.teamD.User ID">
                <font>
                   <Font size="36.0" />
                </font>
