--- a/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/overall.fxml
+++ b/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/overall.fxml
@@ -6,13 +6,13 @@
 
 
 <?import javafx.scene.layout.Pane?>
-<JFXTabPane fx:id="tabPane" minHeight="720.0" minWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerOverall">
+<JFXTabPane fx:id="tabPane" minHeight="720.0" minWidth="1280.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerOverall">
      <Tab text="Create Service Request">
          <AnchorPane fx:id="createServiceRequestTabPane">
 
             </AnchorPane>
      </Tab>
-     <Tab text="Add User">
+     <Tab text="Add edu.wpi.cs3733.d19.teamD.User">
          <Pane fx:id="addUserTabPane">
 
             </Pane>
