--- a/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/service_request_babysitting.fxml
+++ b/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/service_request_babysitting.fxml
@@ -17,8 +17,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerSRB">
-   <ImageView><Image url="Hospitalbackground.png"></Image></ImageView>
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerSRB">
+   <ImageView><Image url="edu/wpi/cs3733/d19/teamD/resources/Hospitalbackground.png"></Image></ImageView>
    <children>
             <BorderPane>
                 <top>
@@ -45,7 +45,7 @@
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="cancel2.png" />
+                              <Image url="edu/wpi/cs3733/d19/teamD/resources/cancel2.png" />
                            </image>
                         </ImageView>
                      </graphic>
