--- a/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/view_users.fxml
+++ b/BabySittingAPI/src/main/java/edu/wpi/cs3733/d19/teamD/resources/view_users.fxml
@@ -8,18 +8,18 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UIControllerVU">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerVU">
    <children>
       <ImageView fx:id="backgroundImage" opacity="0.6" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Hospitalbackground.png" />
+            <Image url="@edu/wpi/cs3733/d19/teamD/resources/Hospitalbackground.png" />
          </image>
       </ImageView>
       <BorderPane>
          <center>
             <TableView fx:id="usersTable" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn prefWidth="130.0" text="User ID" />
+                <TableColumn prefWidth="130.0" text="edu.wpi.cs3733.d19.teamD.User ID" />
                 <TableColumn prefWidth="130.0" text="Permissions" />
                   <TableColumn prefWidth="100.0" text="Username" />
                   <TableColumn prefWidth="100.0" text="Remove" />
