--- a/Project/src/main/resources/popup_main.fxml
+++ b/Project/src/main/resources/popup_main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerPUM">
+<AnchorPane prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.edu.wpi.cs3733.d19.teamD.UIControllerPUM">
    <children>
       <ImageView fitHeight="150.0" fitWidth="300.0" pickOnBounds="true">
          <image>
