--- a/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_babysitting.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRB">
+<BorderPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.edu.wpi.cs3733.d19.teamD.UIControllerSRB">
           <top>
               <MenuBar nodeOrientation="RIGHT_TO_LEFT" prefWidth="600.0" style="-fx-background-color: #ffc41e;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                   <menus>
@@ -63,7 +63,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/feeder1.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/feeder1.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="feeder" layoutX="50.0" layoutY="161.0" mnemonicParsing="false" text="Feeder" textFill="#015080" />
@@ -73,7 +73,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/diaper.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/diaper.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="diaper" layoutX="47.0" layoutY="161.0" mnemonicParsing="false" text="Diapers" textFill="#015080" />
@@ -83,7 +83,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/bath.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/bath.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="bath" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Bath" textFill="#015080" />
@@ -97,7 +97,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/rocking-horse.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/rocking-horse.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="toy" layoutX="58.0" layoutY="161.0" mnemonicParsing="false" text="Toys" textFill="#015080" />
@@ -107,7 +107,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/baby-stroller.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/baby-stroller.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="babyStroller" layoutX="27.0" layoutY="161.0" mnemonicParsing="false" text="Baby Stroller" textFill="#015080" />
@@ -117,7 +117,7 @@
                      <children>
                         <ImageView fitHeight="130.0" fitWidth="120.0" layoutX="30.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/Babysitting/cutlery.png" />
+                              <Image url="@../images/edu.wpi.cs3733.d19.teamD.Babysitting/cutlery.png" />
                            </image>
                         </ImageView>
                         <CheckBox fx:id="food" layoutX="57.0" layoutY="161.0" mnemonicParsing="false" text="Food" textFill="#015080" />
