--- a/Project/src/main/resources/servicerequests/service_request_other_main.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_other_main.fxml
@@ -103,7 +103,7 @@
                   <Insets left="50.0" top="5.0" />
                </GridPane.margin>
             </Text>
-            <TextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" GridPane.rowIndex="3" />
+            <JFXTextField fx:id="nameTextField" maxWidth="250.0" prefWidth="250.0" GridPane.rowIndex="3" />
          </children>
          <BorderPane.margin>
             <Insets left="20.0" right="20.0" />
