--- a/BabySittingAPI/src/main/resources/admin_tools_view_service_request.fxml
+++ b/BabySittingAPI/src/main/resources/admin_tools_view_service_request.fxml
@@ -8,21 +8,24 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerVU">
+<StackPane minHeight="720.0" minWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733.d19.teamD.UIControllerATVSR">
    <children>
       <ImageView fx:id="backgroundImage" opacity="0.6" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@edu/wpi/cs3733/d19/teamD/resources/Hospitalbackground.png" />
+            <Image url="@Hospitalbackground.png" />
          </image>
       </ImageView>
       <BorderPane>
          <center>
-            <TableView fx:id="usersTable" BorderPane.alignment="CENTER">
+            <TableView fx:id="serviceRequestTable" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn prefWidth="130.0" text="edu.wpi.cs3733.d19.teamD.User ID" />
-                <TableColumn prefWidth="130.0" text="Permissions" />
-                  <TableColumn prefWidth="100.0" text="Username" />
-                  <TableColumn prefWidth="100.0" text="Remove" />
+                <TableColumn prefWidth="130.0" text="Request Room" />
+                <TableColumn prefWidth="130.0" text="Service Type" />
+                  <TableColumn prefWidth="100.0" text="UserID" />
+                  <TableColumn prefWidth="100.0" text="Resolved" />
+                  <TableColumn prefWidth="160.0" text="Resolver" />
+                  <TableColumn prefWidth="180.0" text="Additional Messages" />
+                  <TableColumn prefWidth="75.0" text="Remove" />
               </columns>
                <styleClass>
                   <String fx:value="table-view" />
